@@ -1,3 +1,5 @@
+* BUG#8369 Properly overload clone_last_indemnifications function
+
 Version 1.14 - 2017-11-09
 # BUG#6357: Apply underwriting reduction on base_amount
 
